--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prod_start": "set NODE_ENV=production && node index.js"
   },
   "author": "Bhanu Pratap Singh Rathore",
   "license": "ISC",
@@ -22,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "kue": "^0.11.6",
     "mongoose": "^6.5.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-sass-middleware": "^1.0.1",
     "nodemailer": "^6.7.8",
@@ -29,6 +31,17 @@
     "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "rotating-file-stream": "^3.0.4",
     "socket.io": "^4.5.2"
+  },
+  "devDependencies": {
+    "del": "^6.0.0",
+    "gulp": "^4.0.2",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-imagemin": "^6.0.0",
+    "gulp-rev": "^9.0.0",
+    "gulp-sass": "^5.1.0",
+    "gulp-uglify": "^3.0.2",
+    "sass": "^1.55.0"
   }
 }
