--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.6",
+    "cros": "^1.0.1",
     "crypto": "^1.0.1",
     "download": "^8.0.0",
     "ejs": "^3.1.8",
